--- a/front/src/App.css
+++ b/front/src/App.css
@@ -38,6 +38,11 @@
   padding-right: 3.5%;
 }
 
+.meta {
+  font-size: 0.8em;
+  color: rgba(0,0,0,.4);
+}
+
 .container:after,
 .container:before {
   content: " ";
